# Airline-Project

./: .dockerignore  .gitignore  Airline Project.sln  Airline Project.vcxproj  Airline Project.vcxproj.filters  CAddress.cpp  CAddress.h  CCargo.cpp  CCargo.h  CCrewMember.cpp  CCrewMember.h  CFlight.cpp  CFlight.h  CFlightCompany.cpp  CFlightCompany.h  CFlightInfo.cpp  CFlightInfo.h  CHost.cpp  CMakeLists.txt  CPilot.cpp  CPilot.h  CPlane.cpp  CPlane.h  CPlaneCrewFactory.cpp  CPlaneCrewFactory.h  Dockerfile  README.md  main.cpp  test.cpp  testCFC.cpp  testCFlight.cpp  testCM.cpp
.github/workflows/: docker.yaml
data/: Delta.txt
include/: CAddress.h  CCrewMember.h  CFlight.h  CFlightCompException.h  CFlightCompany.h  CFlightInfo.h  CHost.h
src/: CAddress.cpp  CCargo.cpp  CCrewMember.cpp  CFlight.cpp  CFlightCompany.cpp  CHost.cpp  CPilot.cpp  CPlane.cpp  CPlaneCrewFactory.cpp  main.cpp  main_tui.cpp
